@@ -1,0 +1,12 @@
+layer at (0,0) size 800x600
+  RenderView at (0,0) size 800x600
+layer at (0,0) size 800x600
+  RenderBlock {HTML} at (0,0) size 800x600
+    RenderBody {BODY} at (8,8) size 784x492
+      RenderBlock {UL} at (0,0) size 784x100
+        RenderListItem {LI} at (40,0) size 744x100
+          RenderListMarker at (-61,0) size 29x100: bullet
+          RenderInline (generated) at (0,0) size 100x100 [color=#008000]
+            RenderText {#text} at (0,0) size 100x100
+              text run at (0,0) width 100: "a"
+          RenderText {#text} at (0,0) size 0x0
